--- a/src/components/FooterComp/footerComp.css
+++ b/src/components/FooterComp/footerComp.css
@@ -25,6 +25,7 @@ footer .box .link {
     line-height: 20px;
     letter-spacing: 0.04em;
     color: #333333;
+    text-decoration: none;
 }
 
 footer .box .input-area {
